# realtime_chat

./: .env  Cargo.toml
migrations/: 20250331025506_init.sql
postgreSQL/: docker-compose.yml
services/auth/: Cargo.toml
services/auth/src/: jwt_utils.rs  main.rs
services/auth/src/models/: user.rs
services/auth/src/routes/: auth.rs  mod.rs  uer_service.rs
services/chat/src/: main.rs
src/: db.rs  main.rs
