[package]
name = "realtime-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = "0.26.1" 
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
dotenvy = "0.15" 


[workspace]
members = [
    "services/auth",
    "services/chat",
    "services/gateway"
]